--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "carrievrtis.com",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "homepage": "http://www.carrievrtis.com",
     "author": "Carrie Vrtis",
     "license": "W3C",
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "body-parser": "^1.18.2",
+        "command-line-args": "^5.0.2",
         "exif": "^0.6.0",
         "express": "^4.16.2",
         "locale": "^0.1.0",
