--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
         "pug": "^2.0.0-rc.4",
         "sendmail": "^1.2.0"
     },
-    "main": "server.js",
+    "start": "server.js",
     "private": true
 }
