--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "body-parser": "^1.18.2",
+        "docker-secrets": "^1.0.2",
         "exif": "^0.6.0",
         "express": "^4.16.2",
         "locale": "^0.1.0",
