--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,9 @@ FROM node:9.6.1-alpine
 
 RUN npm install -g nodemon
 
+EXPOSE 8080
+
 RUN yarn install
-ENTRYPOINT ["yarn", "start"]
+ENTRYPOINT ["nodemon", "start"]
 
 
