Not dockerizing Nginx, for now.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,6 @@ services:
 
   web:
     image: carrievrtis:app
-    volumes:
-      - "./app:/app"
-    working_dir: /app
     dns:
       - 9.9.9.9
       - 208.67.222.222
@@ -18,33 +15,12 @@ services:
       - SERVER_LISTEN_PORT=8080
     secrets:
       - recaptcha
+    volumes:
+      - "./app:/app"
+    working_dir: /app
+    command: ["yarn", "install"]
     deploy:
       replicas: 2
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-        window: 120s
-
-  nginx:
-    image: carrievrtis:nginx
-    volumes:
-      - "./nginx/config:/config"
-    ports:
-      - "80:80"
-      - "443:443"
-    networks:
-      - backend
-    environment:
-      - URL=carrievrtis.com
-      - SUBDOMAINS=www,ftp,mail
-      - VALIDATION=http
-      - TZ=America/Los_Angeles
-      - PGID=1000
-      - PUID=1000
-      - EMAIL=cjvrtis@gmail.com
-    deploy:
-      replicas: 1
       restart_policy:
         condition: on-failure
         delay: 5s
