--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     volumes:
       - "./app:/app"
     working_dir: /app
-    command: ["yarn", "install"]
+    command: ["./startup.sh"]
     deploy:
       replicas: 2
       restart_policy:
