--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ typings/
 .next
 
 # super secret
-secrets/
+secrets
 
 # static
 *.png
@@ -71,8 +71,8 @@ secrets/
 *.svg
 *.pdf
 *.ico
-static/minisite/
-static/downloads/
+static/minisite
+static/downloads
 
 # nginx runtime files
 nginx/config
