Switching to local mail server over sendmail.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
 secrets:
   recaptcha:
     file: ./secrets/recaptcha.json
+  email:
+    file: ./secrets/email.json
 
 networks:
   backend:
