--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - SERVER_LISTEN_PORT=8080
     secrets:
       - recaptcha
+      - email
     volumes:
       - "./app:/app"
     working_dir: /app
