Updated description of this website.

--- a/app/static/media/code/manifest.json
+++ b/app/static/media/code/manifest.json
@@ -80,6 +80,7 @@
                     "Pug",
                     "NodeJS",
                     "Express",
+                    "Docker",
                     "Git"
                 ]
             }
