Updated photo manifest.

--- a/app/static/media/photo/manifest.json
+++ b/app/static/media/photo/manifest.json
@@ -38,6 +38,38 @@
                     "ISO 200"
                 ]
             },
+            "rockies-1": {
+                "name": "Rocky Mountain National Park",
+                "subtitle": {
+                    "en": "2018"
+                },
+                "contentType": "img",
+                "content": "/static/media/photo/photo-cache/%scale/rockies-1.jpg",
+                "prints": "https://www.redbubble.com/people/brbcarrying/works/31165602-contemplation-rocky-mtn-natl-park?asc=u&p=photographic-print",
+                "tech": [
+                    "Sony α7-II",
+                    "f16.0",
+                    "1/400",
+                    "45mm",
+                    "ISO 250"
+                ]
+            },
+            "rockies-2": {
+                "name": "Rocky Mountain National Park",
+                "subtitle": {
+                    "en": "2018"
+                },
+                "contentType": "img",
+                "content": "/static/media/photo/photo-cache/%scale/rockies-2.jpg",
+                "prints": "https://www.redbubble.com/people/brbcarrying/works/31165662-rocky-mountain-national-park?asc=u&p=photographic-print",
+                "tech": [
+                    "Sony α7-II",
+                    "f8.0",
+                    "1/640",
+                    "24mm",
+                    "ISO 250"
+                ]
+            },
             "17-mile-drive": {
                 "name": "17 Mile Drive",
                 "subtitle": {
