--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,10 @@
 	"homepage": "https://www.carrievrtis.com",
 	"author": "Carrie Vrtis",
 	"license": "MIT",
-	"keywords": ["portfolio", "personal-website"],
+	"keywords": [
+		"portfolio",
+		"personal-website"
+	],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/carriejv/carriejv-portfolio.git"
@@ -14,7 +17,7 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.18.2",
-		"docker-secrets": "^1.0.2",
+		"docker-swarm-secrets": "^0.1.0",
 		"exif": "^0.6.0",
 		"express": "^4.16.2",
 		"locale": "^0.1.0",
