Cleaned up stylesheets.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,6 @@
 FROM node:9.6.1-alpine
-
-RUN npm install -g nodemon
-
-EXPOSE 8080
-
-EXPOSE 7946/tcp
-
-EXPOSE 4789/udp
-
+EXPOSE 8080 7946/tcp 4789/udp
+COPY . ./app
+WORKDIR /app
+RUN yarn install
 CMD ["yarn", "start"]
