Typo fix in manifest.

--- a/app/static/media/writing/manifest.json
+++ b/app/static/media/writing/manifest.json
@@ -58,7 +58,7 @@
         },
         "projects": {
             "truancy-law": {
-                "name": "Trunancy Law Spares Students",
+                "name": "Truancy Law Spares Students",
                 "subtitle": {
                     "en": "Informational"
                 },
