--- a/app/static/media/code/manifest.json
+++ b/app/static/media/code/manifest.json
@@ -72,16 +72,48 @@
                 },
                 "url": "http://www.carrievrtis.com",
                 "tech": [
-                    "HTML",
-                    "CSS",
+                    "Pug",
+                    "SCSS",
                     "JavaScript",
                     "jQuery",
                     "Bootstrap",
-                    "Pug",
                     "NodeJS",
                     "Express",
                     "Docker",
                     "Git"
+                ]
+            }
+        }
+    },
+    "open-source": {
+        "default": "docker-swarm-secrets",
+        "category": {
+            "en": "Open Source",
+            "es": "Open Source"
+        },
+        "projects": {
+            "docker-swarm-secrets": {
+                "name": "Cytube Client",
+                "subtitle": {
+                    "en": "2018",
+                    "es": "2018"
+                },
+                "contentType": "html",
+                "content": {
+                    "en": "/static/media/code/code-cache/en/resource-map.html",
+                    "es": "/static/media/code/code-cache/es/resource-map.html"
+                },
+                "url": "https://co-resource-map.firebaseapp.com",
+                "tech": [
+                    "HTML",
+                    "CSS",
+                    "JavaScript",
+                    "jQuery",
+                    "Google Maps API",
+                    "TriMet API",
+                    "Firebase",
+                    "CloudFlare",
+                    "Subversion"
                 ]
             }
         }
