--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"axios": "^0.18.0",
 		"body-parser": "^1.18.2",
 		"docker-swarm-secrets": "^0.2.0",
 		"exif": "^0.6.0",
@@ -24,6 +25,7 @@
 		"ms": "^2.1.1",
 		"node-recaptcha2": "^2.1.2",
 		"nodemailer": "^4.6.0",
-		"pug": "^2.0.0-rc.4"
+		"pug": "^2.0.0-rc.4",
+		"showdown": "^1.9.0"
 	}
 }
